--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trg-friends-covers",
+  "name": "trg-friends-songs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,17 +19,26 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@popperjs/core": "^2.4.4",
+    "bootstrap": "^4.5.0",
+    "bufferutil": "^4.0.1",
+    "fibers": "^4.0.3",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "utf-8-validate": "^5.0.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -41,6 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "webpack": "^4.43.0"
   }
 }
