--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fibers": "^4.0.3",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-infinite-scroll": "^9.1.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
